--- a/3-1/9-GBL.html
+++ b/3-1/9-GBL.html
@@ -107,8 +107,7 @@
             <li>In <i>Paradise Lost</i>, Raphael warned Adam <ins>not to eat the fruit on the tree of knowledge</ins>.
             </li>
             <li>Milton said that his writing purpose of <i>Paradise Lost</i> was <ins>to justify God’s punishment on
-                    human
-                    beings</ins>.</li>
+                    human beings</ins>.</li>
             <li>Satan was originally <ins>a angel</ins>.</li>
             <li>After Satan was defeated, he <ins>fell down to the blazing fires of hell</ins>.</li>
             <li>When Satan woke up after the defeat, he immediately <ins>expressed his determination that he would never
@@ -179,11 +178,9 @@
                 </ul>
             </li>
             <li>Wordsworth uses <ins>hyperbole</ins> to express the vastness of the vision, an eternal vastness in the
-                line
-                of “They stretched in never-ending line.” in the poem “I wondered Lonely as a cloud”.</li>
+                line of “They stretched in never-ending line.” in the poem “I wondered Lonely as a cloud”.</li>
             <li>The <ins>“Lucy poems”</ins> describe the rare elusive beauty of a young country girl living a simple
-                life in
-                a remote village far from the civilized world.</li>
+                life in a remote village far from the civilized world.</li>
             <li>Which of the following poem is <strong>NOT</strong> written by Coleridge?
                 <ul>
                     <li>“Kubla Khan”</li>
@@ -217,15 +214,13 @@
         <h3>William Blake</h3>
         <ul>
             <li><i>Songs of Innocence</i>, published in 1809, is a lovely volume of poems. The poems praise <ins>the
-                    beauty
-                    of nature and the innocence of the child</ins>.</li>
+                    beauty of nature and the innocence of the child</ins>.</li>
             <li> In the poem “Songs of Innocence”, “lamb” is the symbol of <ins>innocence</ins> in Christianity.</li>
             <li><i>Songs of Experience</i> paints this world of misery, poverty, disease, war and repression with a
                 <ins>melancholy</ins> tone.</li>
             <li>In the line of the poem “The Chimney Sweeper”, “a heaven of our misery” is a figure of speech called
                 <ins>oxymoron</ins>. “Heaven” and “misery”, two words of opposite meaning, are put together to create
-                strong
-                ironic effect.</li>
+                strong ironic effect.</li>
         </ul>
         <h3>Robert Burns</h3>
         <ul>
@@ -274,14 +269,11 @@
                 <ul>
                     <li>He was very handsome, but born lame.</li>
                     <li>He was actually a very good sportsman, yet he was affected by his clubfoot which often made him
-                        feel
-                        sore and angry.</li>
+                        feel sore and angry.</li>
                     <li><del>Because of the English prejudice, his name was denied and excluded from those of famous
-                            poets
-                            in the "Poets' Corner" in Westminster Abbey. </del></li>
+                            poets in the "Poets' Corner" in Westminster Abbey. </del></li>
                     <li>He was once regarded as a satanic poet in England but as the poet of the people on the
-                        Continent.
-                    </li>
+                        Continent.</li>
                 </ul>
             </li>
             <li><i>Don Juan</i> is a long satirical poem based on a traditional Spanish legend in which Don Juan is a
@@ -322,28 +314,45 @@
                     <li>the earth</li>
                 </ul>
             </li>
+            <li>“Ode to the West Wind” was first published in 1820 as part of the collection entitled <ins><i>Prometheus
+                        Unbound, A Lyrical Drama in Four Acts, With Other Poems</i></ins>.</li>
             <li>In “Ode to the West Wind”, west wind is presented as <ins>both destroyer and preserver</ins>.</li>
             <li>Which of the following is <strong>NOT</strong> true?
                 <ul>
                     <li>Shelley held a life-long aversion to cruelty, injustice, authority, institutional religion, and
-                        the
-                        oppressive and hypocritical society.</li>
+                        the oppressive and hypocritical society.</li>
                     <li>Shelley never uses any political term and revolution slogan in “Ode to the West Wind”. </li>
                     <li>Byron's chief contribution is to introduce into English poetry a new style of character,
-                        “Byronic
-                        Hero”.</li>
+                        “Byronic Hero”.</li>
                     <li><del>Byron was once regarded as a satanic poet on the Continent but as the poet of the people in
                             England.</del></li>
                 </ul>
             </li>
             <li>Through the line “If Winter comes, can Spring be far behind?” Shelly shows <ins>his passion and
                     optimism</ins>.</li>
+            <li>All the following are the features of the "Byronic hero" EXCEPT that ______.
+                <ul>
+                    <li>he has immense superiority in his passions and powers</li>
+                    <li>he fights single-handedly and unyieldingly against the tyrannical rules</li>
+                    <li>he shoulders the burden of righting all the wrongs</li>
+                    <li><del>he is a poor yet proud, mysterious rebel figure</del></li>
+                </ul>
+            </li>
+            <li>Shelley was expelled from Oxford for publishing <ins>“The Necessity of Atheism”</ins>.</li>
+            <li>Which of the following is NOT true of Prometheus Unbound?
+                <ul>
+                    <li>Prometheus is punished by Zeus.</li>
+                    <li>With the others’ help, Prometheus is unbound and freed.</li>
+                    <li>Prometheus finally reconciles with Zeus.</li>
+                    <li><del>Prometheus has stolen the fire from Heaven.</del></li>
+                </ul>
+            </li>
             <li>Keats produced all the following famous odes EXCEPT ______.
                 <ul>
                     <li>"Ode on a Grecian Urn"</li>
                     <li>“Ode on Melancholy”</li>
                     <li>“Ode to a Nightingale”</li>
-                    <li>“Ode to the West Wind”</li>
+                    <li><del>“Ode to the West Wind”</del></li>
                 </ul>
             </li>
             <li>“Beauty is truth, truth beauty” is the most famous words of the poem <ins>“Ode on a Grecian Urn”</ins>.
@@ -362,18 +371,147 @@
 
     <div id="week7" class="block">
         <h2>Week7</h2>
+
     </div>
 
     <div id="week8" class="block">
         <h2>Week8</h2>
+        <ul>
+            <li>Written in 1837-38, <ins><i>Oliver Twist</i></ins> tells the story of an orphan boy, whose adventures
+                provide material for a description of the lower depths of London. </li>
+            <li><ins>Naturalism</ins> accepts the theory of “survival of the fittest” and believes in pessimistic
+                determinism.</li>
+            <li><ins>Realism</ins> is a literary trend in nineteenth century and it also refers to a way of writing
+                which presents life as it really is. </li>
+            <li>Victorian dramatist and novelist <ins>Oscar Wilde</ins> believed that art had nothing to do with
+                morality, but should exist for its own sake. Art was independent of life. Art was not the reflection of
+                nature but rather nature was created by art. </li>
+            <li><ins>Thomas Hardy</ins> believes that man’s fate is predetermined tragic, driven by a combined force of
+                “nature”, both inside and outside. </li>
+            <li>Most of George Bernard Shaw’s plays are concerned with political, economic, moral, or religious
+                problems, so they are often termed as <ins>problem plays</ins>. </li>
+            <li>Written by George Bernard Shaw in 1893, and first performed in London in 1902, <ins><i>Mrs. Warren's
+                        Profession</i></ins> is about a former prostitute, now a madam and brothel proprietor, who
+                attempts to come to terms with her disapproving daughter, illustrating Shaw's belief that the act of
+                prostitution was not caused by moral failure but by economic necessity. </li>
+            <li><ins><i>Tess of the d'Urbervilles</i></ins> attracted criticism for its sympathetic portrayal of a
+                "fallen woman" and was initially refused publication. Its subtitle, <i>A Pure Woman: Faithfully
+                    Presented</i>, was intended to raise the eyebrows of the Victorian middle classes. </li>
+            <li>In The Importance of Being Earnest, Wilde followed the tradition of <ins>the comedy of manners</ins> of
+                the 18th century. </li>
+            <li>In Chapter 5 of <ins><i>A Tale of Two Cities</i></ins>, it describes the scene that a cask of wine is
+                broke in the street. People rush in to drink every drop of it. In order not to waste the wine, they even
+                take away the mud together with the wine. They celebrate it as if it were a holiday.</li>
+            <li><i>Pygmalion</i>, one of <ins>George Bernard Shaw</ins>'s most famous plays, was probably his most
+                popular play.</li>
+            <li>The Return of the Native is written by <ins>Thomas Hardy</ins>.</li>
+            <li><ins><i>Vanity Fair</i></ins> is the most successful novel by Thackeray, which follows the lives of
+                Becky Sharp and Amelia Sedley amid their friends and families during and after the Napoleonic Wars.</li>
+            <li><ins><i>A Tale of Two Cities</i></ins> has a famous opening sentence: “It was the best of times, it was
+                the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief,
+                it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the
+                spring of hope, it was the winter of despair, we had everything before us, we had nothing before us, we
+                were all going direct to Heaven, we were all going direct the other way…”</li>
+        </ul>
     </div>
 
     <div id="week9" class="block">
         <h2>Week9</h2>
+        <ul>
+            <li>Which of the following poet is NOT a major one in Victorian age? <ins>Lord Byron</ins></li>
+            <li>Victorian poets wrote poems with more social concerns and have assumed a more <ins>rational</ins> and
+                realistic attitudes towards nature and human life.</li>
+            <li>In 1847, The Princess was published, which was a satire on <ins>women</ins>’s education.</li>
+            <li>“Ulysses” is written in the form of <ins>blank verse</ins> and has been called the first true dramatic
+                monologue.</li>
+            <li>In Memoriam is a long <ins>elegy</ins> recording the emotional, religious and intellectual changes of
+                the poet during the 17 years after the death of his close friend Hallam.</li>
+            <li>Which of the following work recounts Arthur’s attempt and failure to lift up mankind and create a
+                perfect kingdom, from his coming to power to his death? <ins><i>Idylls of the King</i></ins></li>
+            <li>In what mood is the speaker talking to the sea in the poem “Break, Break, Break”? <ins>melancholy</ins>
+            </li>
+            <li>Why do lines 5 - 10 provide a joyful picture in the poem “Break, Break, Break”? <ins>For contrast.</ins>
+            </li>
+            <li>As for the title of the poem “Crossing the Bar”, what figure of speech is employed? <ins>Metaphor.</ins>
+            </li>
+            <li>Which of the following is NOT an image connotating death in the poem “Crossing the Bar”?
+                <ul>
+                    <li>Twilight. </li>
+                    <li>Sunset.</li>
+                    <li>Evening star.</li>
+                    <li><del>Moving tide.</del></li>
+                </ul>
+            </li>
+            <li>The long blank-verse poem <ins><i>The Ring and the Book</i></ins> finally established Browning’s
+                position as one of the greatest English poets.</li>
+            <li>Which of the following is NOT the image of the duke in the poem “My Last Duchess”?
+                <ul>
+                    <li>Arrogance.</li>
+                    <li>Brutality.</li>
+                    <li>Jealousy.</li>
+                    <li><del>Generosity.</del></li>
+                </ul>
+            </li>
+            <li>Which of the following poet has the natural power of linking visual pictures with musical expressions in
+                Victorian age? <ins>Alfred Tennyson.</ins></li>
+            <li>Goblin Market is a narrative poem written by <ins>Christina Rossetti</ins> for children.</li>
+            <li>In the poem “My Last Duchess,” what does the duke mean when he says that “This grew; I gave commands; /
+                Then all smiles stopped together?” <ins>He murdered the duchess.</ins></li>
+        </ul>
     </div>
 
     <div id="week10" class="block">
         <h2>Week10</h2>
+        <ul>
+            <li>Which of the following is NOT true about W. B. Yeats?
+                <ul>
+                    <li><del>Yeats was awarded Nobel Prize for literature in 1923 for his The Waste Land.</del></li>
+                    <li>Yeats and T. S. Eliot are the key poets who brought modernism into English poetry.</li>
+                    <li>Yeats was born into an Anglo-Irish Protestant family in Dublin.</li>
+                    <li>Yeats’ poetic career can be divided into 3 periods.</li>
+                </ul>
+            </li>
+            <li>John Galsworthy's The <i>Forsyte Saga</i> appears in the form of <ins>trilogy</ins>. </li>
+            <li>“APRIL is the cruelest month, breeding /Lilacs out of the dead land, mixing/Memory and desire,
+                stirring/Dull roots with spring rain” was selected from <ins><i>The Waste Land</i></ins>.</li>
+            <li>Modernism rose out of skepticism and disillusion of capitalism. It is a literary school lasted from
+                the beginning of the 20th century until the end of WWII. Which expression is wrong in the
+                followings?
+                <ul>
+                    <li><del>Modernists write poems of impersonal beauty; poems with a dream-like effect, showing a
+                            sense of uncertainty about the world around the poet and his attempt to escape from
+                            reality.</del></li>
+                    <li>Modernism is a strong and conscious break with the past, by rejecting the moral, religious and
+                        cultural values of the past.</li>
+                    <li>Modernism exposes sterility and futility, shows man’s frustration and disillusion, and searches
+                        for salvation and spiritual regeneration.</li>
+                    <li>Modernism describes the distorted, alienated and ill relationships between man and nature.</li>
+                </ul>
+            </li>
+            <li>Which of the following is NOT written by D. H. Lawrence?
+                <ul>
+                    <li><i>Sons and Lovers</i></li>
+                    <li><i>The Rainbow</i></li>
+                    <li><del><i>Hard Times</i></del></li>
+                    <li><i>Women in Love</i></li>
+                </ul>
+            </li>
+            <li>Which one is a modernistic novelist? <ins>James Joyce</ins></li>
+            <li>Eliot’s poem, <i>The Waste Land</i>, is mainly concerned with the <ins>spiritual breakup</ins> of a
+                modern civilization.</li>
+            <li><i>Down by the Salley Gardens</i> is a poem about the fundamental question of life: <ins>How to live and
+                    enjoy</ins></li>
+            <li>In Mrs. Dalloway, the narrative voice is a commenting voice who knows everything about the characters.
+                This voice appears occasionally among the subjective thoughts of characters. What’s the point of view in
+                this novel? <ins>Omniscient narrator</ins></li>
+            <li>Which one was known as the last English novelist who embodies the dreams of a declining British Empire?
+                <ins>Rudyard Kipling</ins></li>
+            <li>Which novelist is mainly remembered for his short stories and novels, like <i>Heart of Darkness</i> and
+                <i>Lord Jim</i>? <ins>Joseph Conrad</ins></li>
+            <li><ins>John Galsworthy</ins> was a conventional writer, having inherited the fine traditions of the great
+                Victorian novelists of the critical realism, who focused on plot development and character portrayal.
+            </li>
+        </ul>
     </div>
 
 </body>
