--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="status-bar">
         <div class="status-left">
             <button class="status-home" id="statusHomeBtn" title="Auto Tiling">
-                <img src="favicon.svg" alt="Home" />
+                <img src="favicon_gray.svg" alt="Home" />
             </button>
             <div class="status-tabs" id="statusTabs">
                 <span class="status-tab active">HOME</span>
